--- a/portofolio.css
+++ b/portofolio.css
@@ -26,7 +26,12 @@ html{
 
 body{
     background-color: #222222;
-    
+    min-height: 100vh;
+    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+    background-image: url('hero graphics/stars.jpg');
+    background-blend-mode: color-dodge;
+    background-repeat: repeat;
+    background-size: 100%;
     margin: 0em;
 }
 
