--- a/portofolio.css
+++ b/portofolio.css
@@ -945,7 +945,7 @@ header a:hover{
         width: 120%;
     }
     .homeSectionText {
-        margin-top: 7em;
+        margin-top: 8em;
     }
 
     .homeSectionText h1 {
@@ -967,7 +967,7 @@ header a:hover{
     }
 
     .aboutSection {
-        margin-left: 3.5em;
+        margin-left: 3.8em;
     }
 
     .aboutSectionText h1 {
@@ -992,6 +992,10 @@ header a:hover{
         padding: 2em 1em 0.5em 1em;
         margin: 1em 1em 2em 1em;
         width: 20%;
+    }
+
+    .workProjectsText {
+        margin-left: 1em;
     }
 
     .workProjectsImages {
