--- a/portofolio.css
+++ b/portofolio.css
@@ -24,7 +24,16 @@ html{
     background-color: #191919;
 }
 
-
+body{
+    background-color: #222222;
+    min-height: 100vh;
+    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+    background-image: url('hero graphics/stars.jpg');
+    background-blend-mode: color-dodge;
+    background-repeat: repeat;
+    background-size: 100%;
+    margin: 0em;
+}
 
 .main{
     padding: 1em;
