--- a/portofolio.css
+++ b/portofolio.css
@@ -344,7 +344,7 @@ header a:hover{
 #homecircle{
     width: 3.9em;
     height: 0.1vh; 
-    right: 4.85vw;
+    right: 4.9vw;
     transform: translateY(-20em);
     animation: homeCircleMov 0.5s ease-in-out
 }
@@ -375,7 +375,7 @@ header a:hover{
 #aboutcircle{
     width: 3.9em; 
     height: 0.1vh; 
-    right: 4.85vw;
+    right: 4.9vw;
     transform: translateY(-15em);
     animation: aboutCircleMove 0.4s ease-in-out;
 }
@@ -405,7 +405,7 @@ header a:hover{
 #workcircle {
     width: 3.9em; 
     height: 0.1vh; 
-    right: 4.85vw;
+    right: 4.9vw;
     transform: translateY(-10em);
     animation: workCircleMov 0.3s ease-in-out
 }
@@ -435,7 +435,7 @@ header a:hover{
 #contactcircle {
     width: 3.9em; 
     height: 0.1vh; 
-    right: 4.85vw;
+    right: 4.9vw;
     transform: translateY(-5em);
     animation: contactCircleMov 0.2s ease-in-out
 }
@@ -852,6 +852,7 @@ header a:hover{
 .rights p {
     color: rgba(255, 255, 255, 0.648);
     font-family: 'poppins';
+    font-size: 0.8rem;
 }
 
 
