--- a/portofolio.css
+++ b/portofolio.css
@@ -852,7 +852,7 @@ header a:hover{
 .rights p {
     color: rgba(255, 255, 255, 0.648);
     font-family: 'poppins';
-    font-size: 0.8rem;
+    font-size: calc(0.3vw + 1vh)
 }
 
 
